<?xml version="1.0" encoding="utf-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.systemsplanet.vipaccess</groupId>
  <artifactId>vipaccess-parent</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>pom</packaging>
  <properties>
  </properties>
  <!-- PROJECT SHARED PLUGINS -->
  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>2.0.2</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-install-plugin</artifactId>
        <version>2.3.1</version>
      </plugin>
      <plugin>
        <artifactId>maven-dependency-plugin</artifactId>
        <version>2.1</version>
      </plugin>
      <plugin>
        <artifactId>maven-jar-plugin</artifactId>
        <version>2.4</version>
      </plugin>      
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.4.3</version>
        <configuration>
          <useFile>false</useFile>
          <argLine>-Xmx1000m -XX:MaxPermSize=256m</argLine>
          <forkMode>pertest</forkMode>
        </configuration>
      </plugin>
    </plugins>
  </build>


  <!-- PROJECT DEPENDENCY VERSIONS -->
  <dependencyManagement>
    <dependencies>

      <!-- PROJECT GENERATED DEPENDENCIES -->
      <dependency>
        <groupId>com.systemsplanet.vipaccess</groupId>
        <artifactId>oath-otp</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.systemsplanet.vipaccess</groupId>
        <artifactId>oath-otp-keyprovisioning</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.systemsplanet.vipaccess</groupId>
        <artifactId>vipaccess-main</artifactId>
        <version>${project.version}</version>
      </dependency>

      <!-- BUILD TIME DEPENDENCIES -->
      <dependency>
        <groupId>commons-codec</groupId>
        <artifactId>commons-codec</artifactId>
        <version>1.10</version>
      </dependency>
      <dependency>
        <groupId>commons-lang</groupId>
        <artifactId>commons-lang</artifactId>
        <version>2.6</version>
      </dependency>
      <dependency>
        <groupId>commons-io</groupId>
        <artifactId>commons-io</artifactId>
        <version>2.2</version>
      </dependency>
      <dependency>
        <groupId>org.apache.httpcomponents</groupId>
        <artifactId>httpclient</artifactId>
        <version>4.5.2</version>
      </dependency>
      <dependency>
        <groupId>com.google.zxing</groupId>
        <artifactId>javase</artifactId>
        <version>3.1.0</version>
      </dependency>
      <dependency>
        <groupId>com.google.zxing</groupId>
        <artifactId>core</artifactId>
        <version>3.1.0</version>
      </dependency>
      <dependency>
        <groupId>com.google.guava</groupId>
        <artifactId>guava</artifactId>
        <version>21.0</version>
      </dependency>      

      <!-- TEST DEPENDENCIES -->      
      <dependency>
        <groupId>junit</groupId>
        <artifactId>junit</artifactId>
        <version>4.11</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.assertj</groupId>
        <artifactId>assertj-core</artifactId>
        <version>3.5.2</version>
        <scope>test</scope>
      </dependency>

    </dependencies>
  </dependencyManagement>
  <modules>
    <module>vipaccess</module>
    <module>oath-otp</module>
    <module>oath-otp-keyprovisioning</module>
  </modules>
</project>